@@ -238,7 +238,7 @@ options:
             at the end of a dirname. Ie, cd?? will match cdA, cd12, but not cd123.
             Do not put '?' at the beginning or in the middle - it will not work.
             The string is not case-sensitive (dVd == DvD).
-        default: '"cd??,disc??,disk??,dvd??,extra?,sub?,subtitle?,vobsub?,sample?,subpack?,ac3,audioaddon,addon,ac3addon"'
+        default: '"cd??,disc??,disk??,dvd??,extra?,sub?,subtitle?,vobsub?,sample?,subpack?,ac3,audioaddon,addon,ac3addon,proof,cover?"'
 
     sample_list:
         type: string
@@ -495,7 +495,7 @@ options:
         comment: |-
             This variable holds a comma-separated list of extensions. All files
             with any of these extensions are allowed and not checked.
-        default: '"jpg,cue,m3u,mpg,mpeg,avi,txt,mov,vob,mkv,wmv"'
+        default: '"jpg,cue,m3u,mpg,mpeg,avi,txt,mov,vob,mkv,wmv,png,m2ts"'
 
     ignored_types:
         type: string
@@ -902,7 +902,7 @@ options:
         comment: |-
             Another way to restrict mp3-releases is by year. Define here a list
             of years allowed on site. The list should be comma-separated.
-        default: '"2005,2006,2007,2008,2009"'
+        default: '"2007,2008,2009,2010,2011,2012"'
 
     audio_year_check:
         type: boolean
